--- a/app/views/events/_event_card.html.erb
+++ b/app/views/events/_event_card.html.erb
@@ -1,7 +1,7 @@
 <%= link_to event_path(event) do%>
   <div 
   id="<%= dom_id event %>"
- class="card p-4 rounded-lg shadow-lg hover:bg-gray-200 bg-gray-100 my-4 w-1/3 relative cursor-pointer">
+ class="card p-4 rounded-lg shadow-lg hover:bg-gray-200 bg-gray-100 my-4 w-full md:w-1/3 relative cursor-pointer">
   <p class="my-5 font-bold text-3-xl ">
     <%= event.theme %>
     
