--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -5,17 +5,22 @@
 
   <% content_for :title, "Organizations" %>
 
-  <div class="flex justify-between items-center">
+  <div class="inline md:flex md:justify-between my-4">
     <h1 class="font-bold text-4xl">Organizations</h1>
-    <%= link_to "New organization", new_organization_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to "New organization", new_organization_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
+    <%= link_to "Search", new_searches_path, data: {turbo_frame: 'new_search'}, class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
   </div>
 
+  <hr>
+
   <div id="organizations" class="min-w-full">
+      <%= turbo_frame_tag 'search_index', data: {controller: 'search', search_target: 'searchWrapper'} do%>
+        <%= turbo_frame_tag 'new_search' do%><% end %>
+        <%= turbo_frame_tag 'results' do%><% end %>
+    <% end %>
+
     <% @organizations.each do |organization| %>
       <%= render organization %>
-      <p>
-        <%= link_to "Show this organization", organization, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-      </p>
     <% end %>
   </div>
 </div>
