Implement RAG with Claude Haiku images

--- a/app/views/searches/create.html.erb
+++ b/app/views/searches/create.html.erb
@@ -1,6 +1,12 @@
 <%= turbo_frame_tag "results" do %>
     <div class="my-5 mt-0 w-full p-4 bg-gray-100">
       <h2 class="my-4 font-bold text-6-xl block text-center"> Results for query: <%= @query %></h2>
+
+        <div class="bg-white">
+        <h3>Final Output</h3>
+        <hr>
+          <%= @output %>
+        </div>
         <div class="flex">
           <% @results.each do |result| %>
       <div >
