--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,12 +7,14 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Events for <%= @organization.title %></h1>
+        <%= link_to "New Event", new_organization_event_path(@organization), class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
   </div>
 
-  <div id="events" class="min-w-full">
+  <div id="events" class="w-full flex-col">
       <% @events.each do |event| %>
       <%= render partial: 'event_card', locals: {event: event} %>
     <% end %>
   </div>
-  <%= link_to "back", root_path %>
+  <%= link_to "Back", root_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
+
 </div>
