--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -11,7 +11,7 @@
   </p>
 
   <div class="my-5 w-full bg-gray-100 rounded p-2 overflow-y-scroll min-h-64 max-h-96">
-    <% @event.images.each do |photo| %>
+    <% @event.images.sample(30).each do |photo| %>
       <div class="inline-block">
         <%= image_tag photo.representation(resize_to_fill: [300, 400]) %>
       </div>
